--- a/censusreporter/apps/census/templates/glossary.html
+++ b/censusreporter/apps/census/templates/glossary.html
@@ -105,6 +105,13 @@
                 <p>For more technical details, see the <a href="http://www.census.gov/geo/reference/gtc/gtc_place.html">Census documentation on places</a>.</p>
             </dd>
 
+      			<dt id="term-public-use-microdata-areas">Public Use Microdata Areas (PUMA)</dt>
+      			<dd>
+      				<p>
+      				Public use microdata areas (PUMAs), as defined by the US Census Bureau, are geographic areas defined to be used with public use microdata sample (PUMS) files
+      				</p>
+      			</dd>
+
             <dt id='term-release'>Release</dt>
             <dd>
                 <p>
